# quant-trading

./: .gitattributes  .gitignore  CMakePresets.json
.github/workflows/: linux-build.yml
database/: quant.db
database/sql/: quant.sql  td_instrument.sql  td_instrument_commission_rate.sql  td_instrument_margin_rate.sql  td_instrument_order_comm_rate.sql
docs/: commit-verification.md  wsl-setup.md
other_depend/sqlite-autoconf-3110000/: Makefile  config.status  configure  configure.ac  libsqlite3.la  libtool
other_depend/sqlite-autoconf-3110000/.deps/: sqlite3-shell.Po  sqlite3-sqlite3.Po  sqlite3.Plo
other_depend/sqlite-autoconf-3110000/.libs/: libsqlite3.so.0.8.6
other_depend/sqlite-autoconf-3110000/tea/: configure  configure.ac
other_depend/sqlite/lib/: libsqlite3.la
other_depend/sqlite/lib/pkgconfig/: sqlite3.pc
quant_enterprise_admin/src/: CMakeCache.txt  CMakeLists.txt  Makefile  callback.cpp  cmake_install.cmake  config.cpp  main_impl.cpp  main_impl.h  sim_log.h  tcp_client.cpp  tcp_client.h  thread_group.cpp  thread_group.h
quant_enterprise_client/src/: CMakeCache.txt  CMakeLists.txt  Makefile  StdFrame.cpp  callback.cpp  callback.h  cmake_install.cmake  const.h  helper_tools.h  main_impl.cpp  main_impl.h  message.h  msg_queue_md.cpp  msg_queue_md.h  msg_queue_td.cpp  share_mem_queue.h  sim_log.cpp  sim_log.h  struct.h  tcp_client.h
quant_enterprise_market/src/: CMakeCache.txt  CMakeLists.txt  Makefile  StdFrame.cpp  cmake_install.cmake  config.cpp  config.h  convert.h  helper_time.h  main_impl.cpp  main_impl.h  md_adapter_ctp.cpp  md_adapter_ctp.h  mem_pool_mng.cpp  mem_pool_mng.h  memory_pool.h  message.h  msg_queue_server.cpp  msg_queue_server.h  save_data.cpp  save_data.h  sim_log.cpp  sim_log.h  struct.h  tcp_server.cpp  tcp_server.h  thread_group.h  thread_queue.cpp  thread_queue.h  thread_safe_stack.h  trade_data.cpp  trade_data.h
quant_enterprise_strategy/src/: CMakeCache.txt  CMakeLists.txt  Makefile  StdFrame.cpp  callback.cpp  callback.h  cmake_install.cmake  config.cpp  config.h  helper_tools.h  main_impl.cpp  main_impl.h  mem_pool_mng.cpp  mem_pool_mng.h  memory_pool.h  message.h  msg_queue_md.h  msg_queue_td.h  save_bar.h  share_mem_queue.h  sim_log.cpp  strategy.cpp  strategy.h  struct.h  tcp_client.cpp  thread_group.cpp  thread_group.h  thread_queue.cpp
quant_enterprise_trade/src/: CMakeCache.txt  CMakeLists.txt  Makefile  StdFrame.cpp  cmake_install.cmake  config.cpp  config.h  const.h  execute_engine.cpp  execute_engine.h  helper_time.h  helper_tools.h  main_impl.cpp  main_impl.h  mem_pool_mng.cpp  mem_pool_mng.h  memory_pool.cpp  memory_pool.h  message.h  msg_queue_server.cpp  msg_queue_server.h  print.h  runtime_manager_ctp.cpp  runtime_manager_ctp.h  sim_log.cpp  sim_log.h  struct.h  tcp_server.cpp  tcp_server.h  td_adapter_ctp.cpp  td_adapter_ctp.h  thread_group.h  thread_queue.h  trade_data.cpp  trade_data.h  typedef.h
shell/: build_all.sh  run_market.sh  run_strategy.sh  run_trade.sh  start.sh
